smartedify_app/platform/gateway/envoy_minimal.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: gateway
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: test-service }
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: test-service
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: test-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: test-service, port_value: 8081 }
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
